// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-progress-overlay Renders \`c-progress-overlay\` with custom props correctly 1`] = `
<transition-stub
  name="fade-transition"
>
  <div
    class="layout progress black"
    style="opacity: 0.3;"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      class="v-progress-circular v-progress-circular--visible v-progress-circular--indeterminate secondary--text"
      role="progressbar"
      style="height: 32px; width: 32px;"
    >
      <svg
        style="transform: rotate(0deg);"
        viewBox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="v-progress-circular__overlay"
          cx="45.714285714285715"
          cy="45.714285714285715"
          fill="transparent"
          r="20"
          stroke-dasharray="125.664"
          stroke-dashoffset="125.66370614359172px"
          stroke-width="5.714285714285714"
        />
      </svg>
      <div
        class="v-progress-circular__info"
      />
    </div>
  </div>
</transition-stub>
`;

exports[`c-progress-overlay Renders \`c-progress-overlay\` with default props correctly 1`] = `
<transition-stub
  name="fade-transition"
>
  <!---->
</transition-stub>
`;

exports[`c-progress-overlay Renders \`c-progress-overlay\` with pending true correctly 1`] = `
<transition-stub
  name="fade-transition"
>
  <div
    class="layout progress background"
    style="opacity: 0.5;"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      class="v-progress-circular v-progress-circular--visible v-progress-circular--indeterminate primary--text"
      role="progressbar"
      style="height: 32px; width: 32px;"
    >
      <svg
        style="transform: rotate(0deg);"
        viewBox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="v-progress-circular__overlay"
          cx="45.714285714285715"
          cy="45.714285714285715"
          fill="transparent"
          r="20"
          stroke-dasharray="125.664"
          stroke-dashoffset="125.66370614359172px"
          stroke-width="5.714285714285714"
        />
      </svg>
      <div
        class="v-progress-circular__info"
      />
    </div>
  </div>
</transition-stub>
`;
